--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
                   </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-right">
-                  <!-- <a class="twitter-timeline" href="https://twitter.com/patrickbitature?ref_src=twsrc%5Etfw">Tweets by
+                  <a class="twitter-timeline" href="https://twitter.com/patrickbitature?ref_src=twsrc%5Etfw">Tweets by
                     patrickbitature</a>
-                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
               </div>
 
