--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="embed-responsive embed-responsive-16by9">
                       <iframe class="embed-responsive-item" src="assets/img/PATRICK-BITATURE-ON-FINANCIAL-LITERACY.mp4"
-                        allowfullscreen></iframe>
+                        allowfullscreen autostart="false"></iframe>
                     </div>
                     <div class="card-body">
                       <h5 class="card-title">More Videos</h5>
