--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+
 </head>
 
 <body>
@@ -50,17 +51,17 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#">My Story</a></li>
-          <li><a href="#">Simba Group</a></li>
+          <li><a href="simba-group.html">Simba Group</a></li>
           <li><a href="#">Mentorship</a></li>
           <li><a href="#">Book</a></li>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
 
       </nav><!-- .nav-menu -->
 
-      <!-- <a href="index.html" class="get-started-btn ml-auto">Get Started</a> -->
+      <!-- <a href="index.html" class="get-started-btn effect04 ml-auto">Get Started</a> -->
 
     </div>
   </header><!-- End Header -->
@@ -75,11 +76,13 @@
           Mentor</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="icofont-facebook"></i></a></li>
-          <li><a href="#"><i class="icofont-twitter"></i></a></li>
-          <li><a href="#"><i class="icofont-instagram"></i></a></li>
-          <li><a href="#"><i class="icofont-googleplus"></i></a></li>
-          <li><a href="#"><i class="icofont-linkedin"></i></a></li>
+          <li><a href="https://www.facebook.com/Patrick-Bitature-174054905964419/" target="_blank"><i
+                class="icofont-facebook"></i></a></li>
+          <li><a href="https://twitter.com/patrickbitature" target="_blank"><i class="icofont-twitter"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UCiw9Vs7hP7JI1Z-rCX3ocBQ" target="_blank"><i
+                class="icofont-youtube"></i></a></li>
+          <li><a href="https://ug.linkedin.com/in/patrickbitature" target="_blank"><i class="icofont-linkedin"></i></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -141,7 +144,7 @@
                 <p class="card-text">Founded in 1998 with the flagship Simba Telecom business, Simba Group is now a
                   conglomerate of East African companies spanning telecommunications, properties, power generation ...
                 </p>
-                <a href="#" class="btn btn-primary">Read More</a>
+                <a href="#" class="btn effect04 btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -154,7 +157,7 @@
                 <p class="card-text">When I was 13 my dad was brutally murdered by the Idi Amin regime. My
                   Dad died at the age of 44, just as I began to truly know him and
                   admire him as my true hero. I loved ...</p>
-                <a href="#" class="btn btn-primary">Read More</a>
+                <a href="#" class="btn effect04 btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -174,28 +177,43 @@
 
         <div class="row justify-content-center" data-aos="zoom-in-up">
 
-          <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Simba_Group_logo-3.png" class="img-fluid" alt="">
-          </div>
 
           <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/PCB Foundation.jpg" class="img-fluid" alt="">
+            <a href="http://www.thesimbagroup.com/" target="_blank" target="_blank">
+              <img src="assets/img/companies/Simba_Group_logo-3.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+
+          <div class="col-lg-4 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="http://www.thesimbagroup.com/portfolio/patrick-bitature-foundation/" target="_blank">
+              <img src="assets/img/companies/PCB Foundation.jpg" class="img-fluid" alt="">
+            </a>
           </div>
 
         </div>
 
         <div class="row justify-content-center" data-aos="zoom-in-up">
 
-          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Protea_Hotel_by_Marriott_Kampala_Skyz_RGB.jpg" class="img-fluid" alt="">
-          </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/electro_maxx.jpg" class="img-fluid" alt="">
+            <a href="http://www.thesimbagroup.com/portfolio/pb/" target="_blank">
+              <img src="assets/img/companies/Protea_Hotel_by_Marriott_Kampala_Skyz_RGB.jpg" class="img-fluid" alt="">
+            </a>
           </div>
 
+
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Protea_Hotel_by_Marriott_Kampala_Logo.jpg" class="img-fluid" alt="">
+            <a href="http://www.electro-maxx.com/index.html" target="_blank">
+              <img src="assets/img/companies/electro_maxx.png" class="img-fluid" alt="">
+            </a>
+          </div>
+
+
+          <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <a href="http://www.thesimbagroup.com/portfolio/pb/" target="_blank">
+              <img src="assets/img/companies/Protea_Hotel_by_Marriott_Kampala_Logo.jpg" class="img-fluid" alt="">
+            </a>
           </div>
 
 
@@ -205,19 +223,24 @@
 
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Musana Carts.png" class="img-fluid" alt="">
+            <a href="http://musanacarts.com/" target="_blank">
+              <img src="assets/img/companies/Musana Carts.png" class="img-fluid" alt="">
+            </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Simba Fresh logo.jpg" class="img-fluid" alt="">
+            <img src="assets/img/companies/Simba Fresh logo.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/companies/Pro 500k.png" class="img-fluid" alt="">
           </div>
 
+
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/IBANDA University Logo.jpg" class="img-fluid" alt="">
+            <a href="https://ibandauniversity.ac.ug/" target="_blank">
+              <img src="assets/img/companies/IBANDA University Logo.png" class="img-fluid" alt="">
+            </a>
           </div>
 
 
@@ -226,20 +249,28 @@
         <div class="row" data-aos="zoom-in-up">
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/Simba Medicare Logo.jpg" class="img-fluid" alt="">
+            <img src="assets/img/companies/Simba Medicare Logo.png" class="img-fluid" alt="">
           </div>
 
+
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/simba-properties.png" class="img-fluid" alt="">
+            <a href="http://www.thesimbagroup.com/project-cat/real-estate/" target="_blank">
+              <img src="assets/img/companies/simba-properties.png" class="img-fluid" alt="">
+            </a>
           </div>
+
 
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <img src="assets/img/companies/simba_farms.jpg" class="img-fluid" alt="">
           </div>
 
+
           <div class="col-lg-3 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/companies/simba_telecom.jpg" class="img-fluid" alt="">
+            <a href="http://www.thesimbagroup.com/portfolio/simba-telecom/" target="_blank">
+              <img src="assets/img/companies/simba_telecom.png" class="img-fluid" alt="">
+            </a>
           </div>
+
 
         </div>
 
@@ -315,19 +346,20 @@
             <section data-social>
               <div class="row">
                 <div class="col-12">
-                  <a href=# class="icofont-facebook"><span>Facebook</span></a>
+                  <a target="_blank" href="https://www.facebook.com/Patrick-Bitature-174054905964419/"
+                    class="icofont-facebook"><span>Facebook</span></a>
                 </div>
                 <div class="col-12">
-                  <a href=# class="icofont-twitter"><span>Twitter</span></a>
+                  <a target="_blank" href="https://twitter.com/patrickbitature"
+                    class="icofont-twitter"><span>Twitter</span></a>
                 </div>
                 <div class="col-12">
-                  <a href=# class="icofont-instagram"><span>Instagram</span></a>
+                  <a target="_blank" href="https://www.youtube.com/channel/UCiw9Vs7hP7JI1Z-rCX3ocBQ"
+                    class="icofont-youtube"><span>Youtube</span></a>
                 </div>
                 <div class="col-12">
-                  <a href=# class="icofont-youtube"><span>Youtube</span></a>
-                </div>
-                <div class="col-12">
-                  <a href=# class="icofont-linkedin"><span>LinkedIN</span></a>
+                  <a target="_blank" href="https://ug.linkedin.com/in/patrickbitature"
+                    class="icofont-linkedin"><span>LinkedIN</span></a>
                 </div>
               </div>
 
@@ -815,6 +847,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/navbar.js"></script>
 
 </body>
 
