--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 
         <div class="section-title">
           <h2>My Story</h2>
-          <p style="color: white;">Where I Came From</p>
+          <p>Where I Came From</p>
         </div>
 
         <div class="row text-center justify-content-center">
           
-          <div class="col-6" data-aos="zoom-out-right">
+          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-right">
             <h1>Origin Story</h1>
             <p>When I was 13 my dad was brutally murdered by the Idi Amin regime. My
               Dad died at the age of 44, just as I began to truly know him and
@@ -227,7 +227,7 @@
 
           </div>
 
-          <div class="col-6" data-aos="zoom-out-left">
+          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-left">
             <a href="#">
               <img src="assets/img/intro-bg(1).jpg" alt="" style="border-radius: 10px;">
             </a>
@@ -401,16 +401,16 @@
 
         <div class="section-title">
           <h2>Read My Work</h2>
-          <p style="color: white;">My Book</p>
+          <p>My Book</p>
         </div>
 
         <div class="row text-left justify-content-center">
-          <div class="col-6" data-aos="zoom-out-left">
+          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-left">
             <a href="#">
               <img src="assets/img/book.jpg" alt="" style="border-radius:10px;">
             </a>
           </div>
-          <div class="col-6" data-aos="zoom-out-right">
+          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-right">
             <h1>Book Excerpt</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, repellat harum adipisci perspiciatis
               mollitia saepe ullam, quas voluptatum natus, quam tempora reiciendis sint rerum quos? Incidunt molestiae
@@ -507,11 +507,11 @@
 
         <div class="youtube">
           <div class="row">
-            <div class="col-3 youtube-logo text-center d-flex">
+            <div class="col-lg-3 col-sm-6 youtube-logo text-center d-flex">
               <i class="icofont-youtube "></i>
               <h4>My Channel</h4>
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-sm-6">
               <img src="assets/img//youtube-channel.PNG" alt="">
             </div>
           </div>
@@ -519,32 +519,32 @@
           <br>
 
           <div class="row">
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/nCCp4-YbWIY" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qKfKnxXGM38" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/efbo7IobnLU" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Wg4kDC95AO8" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/7IK6bWt7z_Q" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-4" data-aos="flip-left">
+            <div class="col-lg-4 col-sm-12" data-aos="flip-left">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/g_4h_wwZ7TI" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
@@ -556,7 +556,7 @@
         <div class="blogs-tweets">
           <div class="row">
 
-            <div class="col-8">
+            <div class="col-lg-8 col-sm-12">
               <div class="row wordpress-logo">
                 <div class="col-12 d-flex">
                   <i class="icofont-brand-wordpress"></i>
@@ -748,7 +748,7 @@
               </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-lg-4 col-sm-12">
               <div class="row twitter-logo">
                 <div class="col-12 d-flex ">
                   <i class="icofont-twitter"></i>
