--- a/index.html
+++ b/index.html
@@ -202,11 +202,16 @@
         </div>
 
         <div class="row text-center justify-content-center">
+          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-left">
+            <a href="#">
+              <img src="assets/img/intro-bg(1).jpg" alt="" style="border-radius: 10px;">
+            </a>
+          </div>
           
           <div class="col-lg-6 col-sm-12" data-aos="zoom-out-right">
             <h1>Origin Story</h1>
             <p>When I was 13 my dad was brutally murdered by the Idi Amin regime. My
-              Dad died at the age of 44, just as I began to truly know him and
+              Father died at the age of 44, just as I began to truly know him and
               admire him as my true hero. I loved my father so much. I was so
               devastated and shocked…..words cannot describe. It was the most heart
               wrenching experience.</p>
@@ -226,12 +231,7 @@
 
 
           </div>
-
-          <div class="col-lg-6 col-sm-12" data-aos="zoom-out-left">
-            <a href="#">
-              <img src="assets/img/intro-bg(1).jpg" alt="" style="border-radius: 10px;">
-            </a>
-          </div>
+          
 
         </div>
 
