--- a/index.html
+++ b/index.html
@@ -841,31 +841,6 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
   <!-- <img id="loader_logo" src="assets/img/PB logo.png"> -->
   <div id="preloader"></div>
-  <div id="chat-circle" class="btn btn-raised">
-    <div id="chat-overlay"></div>
-    <i class="icofont-chat"></i>
-  </div>
-
-  <div class="chat-box">
-    <div class="chat-box-header">
-      ChatBot
-      <span class="chat-box-toggle"><i class="icofont-close"></i></span>
-    </div>
-    <div class="chat-box-body">
-      <div class="chat-box-overlay">
-      </div>
-      <div class="chat-logs">
-
-      </div>
-      <!--chat-log -->
-    </div>
-    <div class="chat-input">
-      <form>
-        <input type="text" id="chat-input" placeholder="Send a message..." />
-        <button type="submit" class="chat-submit" id="chat-submit"><i class="material-icons">send</i></button>
-      </form>
-    </div>
-  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -884,6 +859,20 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/navbar.js"></script>
+
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/602253989c4f165d47c14e90/1eu31d3n7';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 
 </body>
 
