--- a/awards.html
+++ b/awards.html
@@ -92,32 +92,32 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 1</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">International Ernest & Young Entrepreneur of the year (2011)</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
               <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 2</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Doctorate of Philosophy in Humanities - United graduate College and Seminary</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-green">
               <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 3</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">An Outstanding Achievement award by makerere University Business School</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box icon-box-blue">
               <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 4</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Business Leader of the future by Price Waterhouse Coopers (2003)</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
@@ -127,8 +127,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 5</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href=""> ICSA Presidential Medal for Meritorious Service (2018)</a></h4>
+              <p class="description"></p>
             </div>
           </div>
 
