--- a/index.html
+++ b/index.html
@@ -85,27 +85,27 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Latest News 1</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown p-2">Build To Last Conversations</h2>
+          <p class="animate__animated animate__fadeInUp">Subscribe to my YouTube channel and get updates on new episodes uploaded every Saturday as we learn, reflect & grow together to build businesses that outlive our lifetime.</p>
+          <a href="https://www.youtube.com/watch?v=yMoDx9PgAiM" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">Watch Videos</a>
         </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Latest News 2</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown">My Story</h2>
+          <p class="animate__animated animate__fadeInUp">My name is Patrick Bitature. My story so far has been one full of ups and downs & wins and losses. It started with something out of my control; when I was 13 years old and My father was brutally murdered by the Idi Amin regime. Where my story stops however is something that is purely up to me.</p>
+          <a href="biography.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Latest News 3</h2>
-          <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <h2 class="animate__animated animate__fadeInDown">Causes I Am Passionate About</h2>
+          <p class="animate__animated animate__fadeInUp">The Uganda I grew up in and the one I envision future generations living in must be vastly different. For this to happen, we must all play our part. I play mine through Project 500k, Energrow, Corruption walk and Cure Hospital.</p>
+          <a href="awards.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -204,36 +204,40 @@
           <h2>Awards</h2>
         </div>
 
-        <div class="row">
+        <div class="row text-center" >
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="icon-box icon-box-pink">
-              <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 1</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <div class="card" style="width: 100%;" >
+              <img src="assets/img/roundtable.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Award for the contribution to the success of the Presidential Investors’ Round Table II, 2007-2009.</h5>                
+              </div>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box icon-box-cyan">
-              <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 2</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <div class="card" style="width: 100%;" >
+              <img src="assets/img/psfu.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Award given in recognition of outstanding contribution and leadership as Chairman of the Board of PSFU(2014-2016)</h5>                
+              </div>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 3</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <div class="card" style="width: 100%;" >
+              <img src="assets/img/nic.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Award given in recognition of outstanding dedication and insight towards the success of NIC.</h5>                
+              </div>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box icon-box-blue">
-              <div class="icon"><i class="bx bx-award"></i></div>
-              <h4 class="title"><a href="">Award 4</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+            <div class="card" style="width: 100%;" >
+              <img src="assets/img/orient.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Award given for support shown to Orient Bank (2018)</h5>                
+              </div>
             </div>
           </div>
 
