--- a/simbagroup.html
+++ b/simbagroup.html
@@ -117,7 +117,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-wrap filter-tour">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-wrap filter-tour">
             <div class="portfolio-item">
               <img src="assets/img/simba-group/Travels.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -128,7 +128,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-wrap filter-tour">
             <div class="portfolio-item">
