--- a/biography.html
+++ b/biography.html
@@ -83,6 +83,7 @@
           <div class="date right"><p class="right">14 March 1973</p></div>
           <div class="dot"></div>
           <div class="left first">
+            <img src="assets/img/young.jpeg" class="img-responsive pt-2" alt="" style="border-radius: 40%; max-height: 200px;">
             <h1>Early life</h1><hr>
             <p>When I was 13 my dad was brutally murdered by the Idi Amin regime. My
               Dad died at the age of 44, just as I began to truly know him and
@@ -104,6 +105,7 @@
           <div class="date left"><p class="left">30 April 1974</p></div>
           <div class="dot"></div>
           <div class="right hide">
+            <img src="assets/img/turning.jpeg" class="img-responsive pt-2" alt="" style="border-radius: 20px; max-height: 200px;">
             <h1>Turning Point</h1><hr>
             <p>The turning point in my life was about a year later, on the day when
               the family sat down on a mat, not a dining table, to have tea without
@@ -139,6 +141,7 @@
           <div class="date right"><p class="right">2 April 1998</p></div>
           <div class="dot"></div>
           <div class="left hide">
+            <img src="assets/img/simba.jpg" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
             <h1>Simba Group</h1><hr>
             <p>Patrick Bitature is the Founder and Chairman of Simba Group of Companies, based in
               Uganda, as well as the
@@ -163,7 +166,8 @@
           <div class="date left"><p class="left">Till Today</p></div>
           <div class="dot"></div>
           <div class="right hide">
-            <h1>Example Title</h1><hr>
+            <img src="assets/img/hero-solo.png" class="img-responsive pt-2" alt="" style="border-radius: 20%; max-height: 200px;">
+            <h1>Where He Is Now</h1><hr>
             <p>Patrick Bitature serves as the chairman of the boards of Umeme Uganda Ltd. (the country’s main energy
               distributor). He also previously served as Chairman of the Board of Directors for Uganda Investment
               Authority (UIA), and several other organizations.</p>
@@ -188,9 +192,9 @@
         
         <div style="padding-bottom:100px;"></div>
       </div>
-      <div id="footer">
+      <!-- <div id="footer">
         <p id="copyright">End note..</p>
-      </div>
+      </div> -->
     </div>
   </main><!-- End #main -->
 
