--- a/index.html
+++ b/index.html
@@ -363,25 +363,25 @@
         <div class="row" data-aos="fade-up">
          
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/book.jpg" class="img-fluid pt-5 mt-5" alt="">
+            <img src="assets/img/book.jpg" class="img-fluid img-responsive" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <div class="section-title">
               <h2>Publications</h2>
             </div>
             <p>
-              "Very often, I remind myself that the easiest way to get to a place I have never been to is to seek the company of those who have been there. This is something I have said before but I don’t mind repeating it because it’s the truth. The quickest and surest way to prosper in life is to look for those who are already prospering and follow in their footsteps, study what they did and do it, find out what they avoided and avoid it. 
+              "I am now at the stage of life where my focus is teaching. My life has taught me very many lessons, which I believe I should pass along. 
             </p>
             <p>
-              As God had planned it,3 years into the world of employment, I found Patrick Bitature who has since been a great mentor to me. When it comes to making the most important decision in life, I could say that besides my biological parents, Bitature has impacted my life more than any other person- my relatives, friends, school teachers, university lecturers, and colleagues.
-            </p>
-
-            <p>
-              My journey with Bitature has helped me appreciate the meaning of the term ‘mentorship’ in that light. A mentor is someone who has already succeeded in an area where you are still struggling. Someone who can push and stretch you to do things beyond what you thought were your limits. Someone who can identify positive traits in you and help you unleash them. A reputable person who will be kind enough to help you identify and fight your weakness without judging you. That is the kind of mentor Bitature is to me.
+              Going into any business comes with its own challenges and because of that, I have taken on the duty to teach and spend time speaking with youths and adults. With my guidance, I hope that they too can succeed.
             </p>
 
             <p>
-              The book details how one man defied all odds to come out on top. A man who has truly stood out of the crowd to hold high the torch and give light to the rest of the world. From him, we learn that with a big dream, clear goals, the right principles and values, courage, and discipline you will be able to overcome any obstacle that stands between you and your destiny." 
+              This is why I like to mentor young people, like Robert Bake, who has done a great job in putting this book publication together.
+            </p>
+
+            <p>
+              I want to thank everyone who has worked tirelessly to make this book publication project come to fruition. A big thanks to Mr. Bake who took the time and effort to capture my speeches as well as the lessons he picked from the 10 years I've mentored him." 
             </p>
 
             
