--- a/simbagroup.html
+++ b/simbagroup.html
@@ -47,7 +47,7 @@
         <ul>
           <li><a  href="index.html">Home</a></li>
           <li><a href="biography.html">Biography</a></li>
-          <li><a href="awards.html">Awards & Causes</a></li>                    
+          <li><a href="awards.html">Foundation</a></li>                      
           <li><a href="blog.html">Blog</a></li> 
           <li><a class="active " href="simbagroup.html">Simba Group</a></li>        
         
