navabr header and meta change

--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -6,8 +6,11 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Patrick Bitature | Ugandan Businessman</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="The “Patrick and Carol Bitature Foundation”, 
+  is a non-profit organization, working towards providing adequate 
+  healthcare and opportunities to disadvantaged youth in communities 
+  all over Uganda for over 10 years." name="description">
+  <meta content="Patrick Bitature, Ugandan Businessman, Simba Group" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/PB logo.png" rel="icon">
@@ -48,7 +51,7 @@
         <ul>
           <li><a  href="index.html">Home</a></li>
           <li><a href="biography.html">Biography</a></li>
-          <li><a class="active " href="awards.html">PCB Foundation</a></li>                    
+          <li><a class="active " href="pcbfoundation.html">PCB Foundation</a></li>                    
           <li><a href="blog.html">Blog</a></li> 
           <li><a href="simbagroup.html">Simba Group</a></li>        
         
@@ -257,7 +260,7 @@
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="biography.html">Biography</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="awards.html">Awards & Causes</a></li>            
+            <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Awards & Causes</a></li>            
             <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="simbagroup.html">Simba Group</a></li>              
           </ul>
