--- a/biography.html
+++ b/biography.html
@@ -49,7 +49,7 @@
         <ul>
           <li><a  href="index.html">Home</a></li>
           <li><a class="active " href="biography.html">Biography</a></li>
-          <li><a href="awards.html">PCB Foundation</a></li>                      
+          <li><a href="pcbfoundation.html">PCB Foundation</a></li>                      
           <li><a href="blog.html">Blog</a></li> 
           <li><a href="simbagroup.html">Simba Group</a></li>        
         
@@ -401,7 +401,7 @@
           <ul>
             <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="biography.html">Biography</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="awards.html">Awards & Causes</a></li>            
+            <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Awards & Causes</a></li>            
             <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="simbagroup.html">Simba Group</a></li>              
           </ul>
