--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Patrick Bitature | Ugandan Businessman</title>
   <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Patrick Bitature, Ugandan Businessman, Simba Group" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/PB logo.png" rel="icon">
@@ -47,7 +47,7 @@
         <ul>
           <li><a class="active " href="index.html">Home</a></li>
           <li><a href="biography.html">Biography</a></li>
-          <li><a href="awards.html">PCB Foundation</a></li>                    
+          <li><a href="pcbfoundation.html">PCB Foundation</a></li>                    
           <li><a href="blog.html">Blog</a></li> 
           <li><a href="simbagroup.html">Simba Group</a></li>        
         
@@ -105,7 +105,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Causes I Am Passionate About</h2>
           <p class="animate__animated animate__fadeInUp">The Uganda I grew up in and the one I envision future generations living in must be vastly different. For this to happen, we must all play our part. I play mine through Project 500k, Energrow, Corruption walk and Cure Hospital.</p>
-          <a href="awards.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+          <a href="pcbfoundation.html" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
         </div>
       </div>
 
@@ -245,7 +245,7 @@
 
         <div class="row">
           <div class="col-12 text-center">           
-            <a href="awards.html" class="btn readMore">More Awards</a>
+            <a href="pcbfoundation.html" class="btn readMore">More Awards</a>
           </div>
         </div>
 
@@ -611,7 +611,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="biography.html">Biography</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="awards.html">Awards & Causes</a></li>            
+              <li><i class="bx bx-chevron-right"></i> <a href="pcbfoundation.html">Awards & Causes</a></li>            
               <li><i class="bx bx-chevron-right"></i> <a href="blog.html">Blog</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="simbagroup.html">Simba Group</a></li>              
             </ul>
