--- a/pcbfoundation.html
+++ b/pcbfoundation.html
@@ -97,7 +97,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box d-flex flex-wrap align-items-center">
-            <img src="assets/img/companies/PCB Foundation.jpg" class="img-fluid" style="width: 100%;" alt="">
+            <img src="assets/img/PCB Foundation logo.jpg" class="img-fluid" style="width: 100%;" alt="">
             <!-- <a href="https://www.youtube.com/watch?v=uj-bZtv4uf4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a> -->
           </div>
 
