--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
             
               <div class="col-12 text-center justify-cntent-center contact">                          
-                <form id="form" target="_blank" action="https://app.99inbound.com/api/e/mB4B3CLi" method="POST" class="php-email-form contact1-form">
+                <form id="form" action="https://app.99inbound.com/api/e/mB4B3CLi" method="POST" class="php-email-form contact1-form">
                   
                   <div class="row">
                     <div class="col-md-6 form-group">
